# 42NextPythonModules

M0/ex1/: ft_plot_area.py
M0/ex2/: ft_harvest_total.py
M0/ex3/: ft_plant_age.py
M0/ex4/: ft_water_reminder.py
M0/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
M0/ex6/: ft_garden_summary.py
M0/ex7/: ft_seed_inventory.py
M1/ex0/: ft_garden_intro.py
M1/ex1/: ft_garden_data.py
M1/ex2/: ft_plant_growth.py
M1/ex3/: ft_plant_factory.py
M1/ex4/: ft_garden_security.py
M1/ex5/: ft_plant_types.py
M1/ex6/: ft_garden_analytics.py
M10/ex0/: lambda_spells.py
M10/ex1/: higher_magic.py
M10/ex2/: scope_mysteries.py
M10/ex3/: functools_artifacts.py
M10/ex4/: decorator_mastery.py
M2/ex0/: ft_first_exception.py
M2/ex1/: ft_different_errors.py
M2/ex2/: ft_custom_errors.py
M2/ex3/: ft_finally_block.py
M2/ex4/: ft_raise_errors.py
M2/ex5/: ft_garden_manager.py
M3/ex0/: ft_command_quest.py
M3/ex1/: ft_score_analytics.py
M3/ex2/: ft_coordinate_system.py
M3/ex3/: ft_achievement_tracker.py
M3/ex4/: ft_inventory_system.py
M3/ex5/: ft_data_stream.py
M3/ex6/: ft_analytics_dashboard.py
M4/ex0/: ft_ancient_text.py
M4/ex1/: ft_archive_creation.py  new_discovery.txt
M4/ex2/: ft_stream_management.py
M4/ex3/: ft_vault_security.py
M4/ex4/: ft_crisis_response.py
M4/helpers/: data_generator.py  sample_data.json
M5/tester/: main.py
M5_new/: coorr.py
M5_new/ex0/: stream_processor.py
M6/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
M8/ex1/: loading.py  pyproject.toml
(+50 files in other folders)
